# ReliableRealTimeTransportProtocol

./: .gitignore  .gitignore.bak  LICENSE  README.md  devenv.nix  metro.bst  metro.dbj
demo/client/: Cargo.toml
demo/client/src/: main.rs
demo/messanger/: package-lock.json  package.json  tsconfig.json
demo/messanger/src/: App.tsx  FileManager.tsx  RRTPConnectionSettings.tsx  RRTPLog.tsx  RRTPMessageSendingInputs.tsx  RRTPStatus.tsx  main.tsx  rust_type_definitions.ts  styles.css
demo/messanger/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
demo/messanger/src-tauri/src/: commands.rs  connection_processor.rs  main.rs  message.rs  models.rs
demo/messanger/src-tauri/src/models/: file_models.rs  log_message.rs  log_message_connector_events_adapter.rs  message_type.rs  network_file_info.rs
demo/messanger/src/dev/: palette.tsx  previews.tsx  useInitial.ts
demo/receiver/: Cargo.toml
demo/receiver/src/: main.rs
demo/sender/: .gitignore  Cargo.toml
demo/sender/src/: main.rs  ui.rs
demo/sender/src/ui/: connection_status.rs  message_subscriber.rs  rrtp_application.rs  status.rs
demo/server/: Cargo.toml
demo/server/src/: main.rs
doc/RRTTP/: Alt texts.md  Checklist.md  Checksum.md  Deadlocks.md  Error checking.md  Flow Control.md  Packet_Structure.xlsx  RRTTP Packet Structure.md  Receiver.md  Sliding Window.md  Transmitter.md  UDP Implementation.md
doc/RRTTP/.obsidian/: workspace.json
doc/latex/auxil/: main.aux  main.bbl  main.blg  main.toc
doc/latex/src/: architecture.tex  devenv.nix  listings-rust.sty  main.bib  main.tex  mendeley.bib  metro.bst  references.bib  sliding_window.tex
lib_rrttp/: .gitignore  Cargo.toml
lib_rrttp/benches/: async_vs_sync_udp_socket.rs  collections.rs  transfer_performance.rs
lib_rrttp/src/: application_layer.rs  checksum.rs  constants.rs  control_bits.rs  frame.rs  frame_status.rs  lib.rs  option.rs  receiver.rs  socket.rs  transmitter.rs  transport_layer.rs  window.rs
lib_rrttp/src/application_layer/: connection_manager.rs  connector.rs  event_emitter.rs  message.rs  message_type.rs
lib_rrttp/src/transport_layer/: connection_manager.rs  constants.rs  control_bits.rs  frame.rs  frame_status.rs  option.rs  queue_sender.rs  receiver.rs  receiver_window.rs  receiving_window_manager.rs  socket.rs  transmitter.rs  transmitter_window.rs  window.rs  window_manager.rs
lib_rrttp/src/window/: mod.rs  receiver.rs  transmitter.rs
lib_rrttp/tests/: encoding.rs  packet.rs
testing/: .gitignore  Cargo.toml  plot.py  rrtp.csv  tcp.csv  udp.csv
testing/src/: main.rs
