[package]
name = "lib_rrttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bitflags = "2.4.1"
futures = "0.3.30"
log = "0.4.20"
rand = "0.8.5"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "async_vs_sync_udp_socket"
harness = false

[[bench]]
name = "collections"
harness = false

[[bench]]
name = "transfer_performance"
harness = false
