[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
lib_rrttp = { path = "../lib_rrttp" }
serde = { version = "1.0.196", features = ["derive"] }
serde_millis = "0.1.1"
