[package]
name = "messanger"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
lib_rrttp = { path = "../../../lib_rrttp" }
tauri = { version = "1.5", features = ["path-all", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.20", features = ["release_max_level_off"] }
fern = "0.6.2"
humantime = "2.1.0"
typeshare = "1.0.1"
bincode = "1.3.3"
infer = "0.15.0"
anyhow = "1.0.79"
thiserror = "1.0.57"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


